# PyTokenCounter

./: README.md  concatOutput.txt  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
PyTokenCounter/: __init__.py  _utils.py  cli.py  core.py  encoding_utils.py  file_tokens.py
Tests/: Runner.py  out.txt
Tests/Answers/: TestDirectory.json  TestDirectoryNoRecursion.json  TestFile1.json  TestFile2.json
Tests/Input/: TestFile1.txt  TestFile1252.txt  TestFile2.txt  TestFileWindows1252.txt
Tests/Input/TestDirectory/: TestDir1.txt  TestDir2.txt  TestDir3.txt
Tests/Input/TestDirectory/TestSubDir/: TestDir4.txt  TestDir5.txt
TokenCounter/: __init__.py  cli.py  main.py
